# grit

./: Cargo.toml  DESIGN.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: action.rs  app.rs  auth.rs  cache.rs  config.rs  error.rs  event.rs  forge.rs  gitea.rs  github.rs  gitlab.rs  main.rs  pager.rs  tui.rs  types.rs
src/ui/: commit_detail.rs  home.rs  mod.rs  popup.rs  pr_detail.rs  repo_list.rs  repo_view.rs
