[package]
name = "grit"
version = "0.1.0"
edition = "2021"
description = "A TUI for browsing GitHub repositories, pull requests, issues, commits, and actions"
license = "MIT"
readme = "README.md"
keywords = ["github", "tui", "cli", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
octocrab = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
open = "5"
arboard = "3"
dirs = "5"
